Aside lateral con links de navegacion

--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
         <h1>Miniproyectos</h1>
     </header>
     <main class="container">
-        <aside></aside>
+        <aside class="panel">
+            <nav class="menu">
+                <a href="">Detector de gestos</a>
+                <a href="">Editor de notas</a>
+                <a href="">Ejercicio 3</a>
+                <a href="">Ejercicio 4</a>
+                <a href="">Ejercicio 5</a>
+                <a href="">Ejercicio 6</a>
+                <a href="">Ejercicio 7</a>
+                <a href="">Ejercicio 8</a>
+                <a href="">Ejercicio 9</a>
+                <a href="">Ejercicio 10</a>
+            </nav>
+        </aside>
         <section>
             <h2 class="title">Detector de gestos con la cámara</h2>
             <video id="camara" src=""></video>
