Estructura piedra, papel y tijeras

--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
         </section>
         <section>
             <h2 class="title">Editor de notas(IndexedDB)</h2>
+            <div class="half">
+                <div class="text">
+                    <h3 class="time"></h3>
+                    <textarea name="" id="" rows="20" cols="60" placeholder="Ingrese su nota"></textarea>
+                </div>
+                <div class="list">
 
+                </div>
+            </div>
         </section>
-        <section></section>
+        <section>
+            <h2 class="title center">Piedra, Papel y Tijeras</h2>
+            <div class="flex-column">
+                <div class="ppt-1"></div>
+                <div class="ppt-1"></div>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
