--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3 class="info"></h3>
         </div>
         <section>
-            <h2 class="title">Detector de gestos con la cámara</h2>
+            <h2 class="title">Detector de cámara</h2>
             <video id="camara" src=""></video>
         </section>
         <section>
