Integracion con weather api

--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
                 <div class="ppt-1"></div>
             </div>
         </section>
-        <section></section>
+        <section id="weather">
+            <h2 class="center">Datos con Api del Clima</h2>
+        </section>
         <section></section>
     </main>
     <script  type="module" src="imports_js.js"></script>
     <script type="module" src="./js/gesture_detector.js"></script>
     <script type="module" src="./js/indexedDB.js"></script>
     <script src="./js/rock_scissor_paper.js"></script>
-
+    <script src="./js/weather.js"></script>
 </body>
 </html>
