Estructura de Rock, scissor, paper, lizard and spock

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="">Detector de gestos</a>
                 <a href="">Editor de notas</a>
                 <a href="">Piedra, Papel, Tijeras</a>
-                <a href="">Ejercicio 4</a>
+                <a href="">Datos con Api del Clima</a>
                 <a href="">Ejercicio 5</a>
                 <a href="">Ejercicio 6</a>
                 <a href="">Ejercicio 7</a>
@@ -62,13 +62,26 @@
                     <button disabled id="restart">Restart</button>
                     <div id="result"></div>
                 </div>
-                <div class="ppt-1"></div>
+                <div class="ppt-1">
+                    <div class="opponent flex-row">
+                        <img src="./assets/cover.png" alt="" class="coverplus">
+                    </div>
+                    <div class="you flex-row">
+                        <button class="gameppt"><img src="./assets/lizardexp.png" alt=""></button>
+                        <button class="gameppt"><img src="./assets/paperexp.png" alt=""></button>
+                        <button class="gameppt"><img src="./assets/rockexp.png" alt=""></button>
+                        <button class="gameppt"><img src="./assets/scissorexp.png" alt=""></button>
+                        <button class="gameppt"><img src="./assets/spockexp.png" alt=""></button>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="weather">
             <h2 class="center">Datos con Api del Clima</h2>
+            Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.com</a>
         </section>
         <section></section>
+        
     </main>
     <script  type="module" src="imports_js.js"></script>
     <script type="module" src="./js/gesture_detector.js"></script>
