Estilos del popup

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     
                 </div>
                 <button disabled id="restart">Restart</button>
-                    <div id="result"></div>
+                <div class="none" id="result"></div>
                 <div class="ppt-1">
                     <div class="opponent flex-row">
                         <img src="./assets/cover.png" alt="" class="coverplus">
