Fix bug de poder jugar con opcion elegida

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                         <img src="./assets/cover.png" alt="" class="coverplus">
                     </div>
                     <div class="you flex-row">
-                        <button class="gameppt"><img src="./assets/lizardexp.png" alt=""></button>
-                        <button class="gameppt"><img src="./assets/paperexp.png" alt=""></button>
-                        <button class="gameppt"><img src="./assets/rockexp.png" alt=""></button>
-                        <button class="gameppt"><img src="./assets/scissorexp.png" alt=""></button>
-                        <button class="gameppt"><img src="./assets/spockexp.png" alt=""></button>
+                        <button class="gameppt2"><img src="./assets/lizardexp.png" alt=""></button>
+                        <button class="gameppt2"><img src="./assets/paperexp.png" alt=""></button>
+                        <button class="gameppt2"><img src="./assets/rockexp.png" alt=""></button>
+                        <button class="gameppt2"><img src="./assets/scissorexp.png" alt=""></button>
+                        <button class="gameppt2"><img src="./assets/spockexp.png" alt=""></button>
                     </div>
                 </div>
             </div>
