--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main class="container">
         <aside class="panel">
             <nav class="menu">
-                <a href="">Detector de gestos</a>
-                <a href="">Editor de notas</a>
-                <a href="">Piedra, Papel, Tijeras</a>
-                <a href="">Datos con Api del Clima</a>
+                <a href="#detector">Detector de gestos</a>
+                <a href="#editor">Editor de notas</a>
+                <a href="#rock_scissor_paper">Piedra, Papel, Tijeras</a>
+                <a href="#weather">Datos con Api del Clima</a>
                 <a href="">Ejercicio 5</a>
                 <a href="">Ejercicio 6</a>
                 <a href="">Ejercicio 7</a>
@@ -29,11 +29,11 @@
             <h2 class="center">Bienvenido</h2>
             <h3 class="info"></h3>
         </div>
-        <section>
+        <section id="detector">
             <h2 class="title">Detector de cámara</h2>
             <video id="camara" src=""></video>
         </section>
-        <section>
+        <section id="editor">
             <h2 class="title">Editor de notas(IndexedDB)</h2>
             <div class="half">
                 <div class="text">
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="rock_scissor_paper">
             <h2 class="title center">Piedra, Papel y Tijeras</h2>
             <div class="flex-column">
                 <div class="ppt-1">
@@ -68,13 +68,15 @@
                         <img src="./assets/cover.png" alt="" class="coverplus">
                     </div>
                     <div class="you flex-row">
-                        <button class="gameppt2"><img src="./assets/lizardexp.png" alt=""></button>
-                        <button class="gameppt2"><img src="./assets/paperexp.png" alt=""></button>
-                        <button class="gameppt2"><img src="./assets/rockexp.png" alt=""></button>
-                        <button class="gameppt2"><img src="./assets/scissorexp.png" alt=""></button>
-                        <button class="gameppt2"><img src="./assets/spockexp.png" alt=""></button>
+                        <button class="gameppt2"><img id="lizardexp" src="./assets/lizardexp.png" alt=""></button>
+                        <button class="gameppt2"><img id="paperexp" src="./assets/paperexp.png" alt=""></button>
+                        <button class="gameppt2"><img id="rockexp" src="./assets/rockexp.png" alt=""></button>
+                        <button class="gameppt2"><img id="scissorexp" src="./assets/scissorexp.png" alt=""></button>
+                        <button class="gameppt2"><img id="spockexp" src="./assets/spockexp.png" alt=""></button>
                     </div>
                 </div>
+                <button disabled id="restart2">Restart</button>
+                <div class="none" id="result2"></div>
             </div>
         </section>
         <section id="weather">
