Refactorizacion de funciones

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                         <img class="cover" src="./assets/cover.png" alt="">
                     </div>
                     <div class="you flex-row">
-                        <button class="gameppt"><img id="paper" src="./assets/paper.png" alt=""></button>
-                        <button class="gameppt"><img id="rock" src="./assets/rock.png" alt=""></button>
-                        <button class="gameppt"><img id="scissor" src="./assets/scissor.png" alt=""></button>
+                        <button class="gameppt"><img class="game" id="paper" src="./assets/paper.png" alt=""></button>
+                        <button class="gameppt"><img class="game" id="rock" src="./assets/rock.png" alt=""></button>
+                        <button class="gameppt"><img class="game" id="scissor" src="./assets/scissor.png" alt=""></button>
                     </div>
                     
                 </div>
