Estructura de calculador de edad

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#rock_scissor_paper">Piedra, Papel, Tijeras</a>
                 <a href="#weather">Datos con Api del Clima</a>
                 <a href="#advices">Api de Consejos</a>
-                <a href="">Ejercicio 6</a>
+                <a href="">Calculador de Edad</a>
                 <a href="">Ejercicio 7</a>
                 <a href="">Ejercicio 8</a>
                 <a href="">Ejercicio 9</a>
@@ -90,6 +90,26 @@
             <h2 class="center">Api de Consejos</h2>
             <div id="advice" class="advice">
 
+            </div>
+        </section>
+        <section id="yourAge">
+            <h2 class="center">Calculador de Edad</h2>
+            <form action="" id="age">
+                <label for=""  class="flex-column">DAY
+                    <input type="number" name="" id="" placeholder="DD">
+                </label>
+                <label for="" class="flex-column">MONTH
+                    <input type="number" name="" id="" placeholder="MM">
+                </label>
+                <label for=""  class="flex-column">YEAR
+                    <input type="number" name="" id="" placeholder="YYYY">
+                </label>
+            </form>
+            <hr>
+            <div id="age-calc" class="age-calc">
+                <div id="calcYears"></div>
+                <div id="calcMonths"></div>
+                <div id="calcDays"></div>
             </div>
         </section>
     </main>
