FEAT(index) added index and styles

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </section>
         <section id="hangman">
             <h2 class="center">Ahorcado</h2>
+            <div id="words"></div>
         </section>
         <section id="advices">
             <h2 class="center">Api de Consejos</h2>
@@ -136,5 +137,6 @@
     <script src="./js/advice.js"></script>
     <script src="./js/age_calculator.js"></script>
     <script src="./js/ecommerce.js"></script>
+    <script src="./js/words.js"></script>
 </body>
 </html>
