ALL(all) uploaded all the modifications 4-4-2025

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         </section>
         <section id="hangman">
             <h2 class="center">Ahorcado</h2>
+            <figure>
+                <img id="try" src="./assets/intentos-5.png" alt="">
+            </figure>
             <div id="words"></div>
         </section>
         <section id="advices">
