FEAT(html) added new sections and meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Axel Leguero">
     <title>Miniproyectos con JS</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -21,8 +22,8 @@
                 <a href="#advices">Api de Consejos</a>
                 <a href="#yourAge">Calculador de Edad</a>
                 <a href="#ecommerce">E-Commerce</a>
-                <a href="">Ejercicio 9</a>
-                <a href="">Ejercicio 10</a>
+                <a href="#draganddrop">Drag And Drop</a>
+                <a href="#history">Historial</a>
             </nav>
         </aside>
         <div class="section">
@@ -130,6 +131,12 @@
                 </div>
             </article>
             
+        </section>
+        <section id="draganddrop">
+            <h2 class="center">Drag and Drop</h2>
+        </section>
+        <section id="history">
+            <h2 class="center">Historial visitado</h2>
         </section>
     </main>
     <script  type="module" src="imports_js.js"></script>
