ALL(all) updates and interactivity improved

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <h2 class="center">Bienvenido</h2>
             <h3 class="info"></h3>
         </div>
-        <section id="detector">
+        <section id="detector" class="flex-column">
             <h2 class="title">Detector de cámara</h2>
             <video id="camara" src=""></video>
+            <button id="cameraOn">Encender</button>
         </section>
         <section id="editor">
             <h2 class="title">Editor de notas(IndexedDB)</h2>
