FEAT(styles) added tags and styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Axel Leguero">
+    <meta name="keywords" content="Proyectos miniproyectos ideas portfolio portafolio proyecto JavaScript">
     <title>Miniproyectos con JS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
     <main class="container">
         <aside class="panel">
             <nav class="menu">
-                <a href="#detector">Detector de gestos</a>
+                <a href="#detector">Detector de cámara</a>
                 <a href="#editor">Editor de notas</a>
                 <a href="#rock_scissor_paper">Piedra, Papel, Tijeras</a>
                 <a href="#weather">Datos con Api del Clima</a>
@@ -26,6 +27,7 @@
                 <a href="#ecommerce">E-Commerce</a>
                 <a href="#draganddrop">Drag And Drop</a>
                 <a href="#history">Historial</a>
+                <a href="#priorities">Lista de prioridades</a>
             </nav>
         </aside>
         <div class="section">
@@ -140,6 +142,11 @@
         </section>
         <section id="history">
             <h2 class="center">Historial visitado</h2>
+        </section>
+        <section id="priorities">
+            <h2 class="center">Lista de prioridades</h2>
+            <input type="search" name="priority" id="priority" placeholder="Escribe una prioridad">
+            <div class="priority-list"></div>
         </section>
     </main>
     <script  type="module" src="imports_js.js"></script>
