FEAT (js) added new js file

--- a/index.html
+++ b/index.html
@@ -158,5 +158,6 @@
     <script src="./js/age_calculator.js"></script>
     <script src="./js/ecommerce.js"></script>
     <script src="./js/words.js"></script>
+    <script src="./js/priority_list.js"></script>
 </body>
 </html>
