FEAT(html) added structure of drag and drop

--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
         </section>
         <section id="draganddrop">
             <h2 class="center">Drag and Drop</h2>
+            <h2 class="center">Adivina el Pokemon arrastrandolo</h2>
+            <article class="pokemons">
+                <div class="drag"></div>
+                <div class="drop"></div>
+            </article>
         </section>
         <section id="history">
             <h2 class="center">Historial visitado</h2>
@@ -159,5 +164,6 @@
     <script src="./js/ecommerce.js"></script>
     <script src="./js/words.js"></script>
     <script src="./js/priority_list.js"></script>
+    <script src="./js/dragndrop.js"></script>
 </body>
 </html>
